crates/nidus/tests/ui/controller_non_string_path.rs
use nidus::prelude::*;

#[controller(42)]
struct UsersController;

fn main() {}
